--- a/README.html
+++ b/README.html
@@ -170,9 +170,20 @@ pre code {
 <div id="data-hackdays-be-2021" class="section level1">
 <h1>Data Hackdays BE 2021</h1>
 <p><a href="https://hack.opendata.ch/project/774">Challenge C26: Uebertrittsquote Schulen</a></p>
-<p><a href="https://tricktracktriu.github.io/dashboard_BE/">Vorlage Dashboard</a></p>
-<p>(<a href="https://github.com/brodrigues12345/Uebertrittsquoten_Schule" class="uri">https://github.com/brodrigues12345/Uebertrittsquoten_Schule</a>)</p>
-<p>Die CSV-Datei zeigt im ersten Sheet das bevorzugte Format der Daten. Könnte auch mit einem R-Skript gemacht werden.</p>
+</div>
+<div id="ziel" class="section level1">
+<h1>Ziel</h1>
+<p>Visualisierungen der Karten in der <a href="https://www.erz.be.ch/erz/de/index/direktion/organisation/generalsekretariat/statistik.assetref/dam/documents/ERZ/GS/de/GS-biev-statistik/BKD_INS_2021_Bildungsstatistik_Kt_BE_Basisdaten_2020.pdf">Bildungsstatistik</a> sollen interaktiv im Web verfügbar sein.</p>
+<p><a href="https://www.erz.be.ch/erz/de/index/direktion/organisation/generalsekretariat/statistik.html">Quelle</a></p>
+</div>
+<div id="datenaufbereitung" class="section level1">
+<h1>Datenaufbereitung</h1>
+<p>R-Ansatz: Die CSV-Datei im Repository zeigt im ersten Sheet das bevorzugte Format der Daten. Könnte auch mit einem R-Skript gemacht werden.</p>
+<p><a href="https://github.com/brodrigues12345/Uebertrittsquoten_Schule">Daten für PowerBi-Ansatz</a></p>
+</div>
+<div id="dashboard" class="section level1">
+<h1>Dashboard</h1>
+<p><a href="https://tricktracktriu.github.io/dashboard_BE/">Vorlage Dashboard für R</a></p>
 </div>
 
 
